# pcloud-server

./: .env  .env.example  .gitignore  Cargo.toml  README.md  identity.json
docs/: api_endpoints_roadmap.md  api_reference.md  personal_cloud_codex_guide.md  personal_cloud_full_guide.md  search_feature_prompt.md
migrations/: 0001_initial_setup.sql  0002_add_starred_flags.sql  0002_seed_roles.sql  0003_add_created_by_to_resources.sql  0003_add_profile_image_to_users.sql
src/: config.rs  error.rs  identity.rs  main.rs
src/api/: admin.rs  client.rs
src/db/: mod.rs
src/http/: router.rs
src/modules/: mod.rs
src/modules/admin/: dto.rs  handlers.rs  service.rs
src/modules/auth/: dto.rs  handlers.rs  service.rs
src/modules/setup/: dto.rs  handlers.rs  service.rs
src/modules/storage/: dto.rs  handlers.rs  service.rs
src/modules/system/: handlers.rs
src/network/: mdns.rs
src/web/: static_files.rs
web/admin-launch/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
web/admin-launch/src/: index.html  styles.css
web/admin-launch/src/app/: app.css  app.html  app.spec.ts  app.ts
web/admin-launch/src/app/dto/: admin-setup-request.dto.ts  api-error-response.dto.ts  setup-initialize-request.dto.ts  setup-initialize-response.dto.ts  setup-status-response.dto.ts  system-setup-request.dto.ts
web/admin-launch/src/app/i18n/: translations.ts
web/admin-launch/src/app/pipes/: t.pipe.ts
web/main-app/: README.md  angular.json  package-lock.json  package.json
web/main-app/src/: styles.css
web/main-app/src/app/: app.routes.ts  app.ts
(+76 files in other folders)
