[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
mime_guess = "2"
tower-http = { version = "0.5", features = ["trace"] }