[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.7"
dotenvy = "0.15"
mime_guess = "2"
rand_core = { version = "0.6", features = ["std"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
